# Snake

./: .gitignore  CMakeLists.txt  LICENSE  init.sh  main.cpp  snake
includes/: ACase.hpp  Display.hpp  ICase.hpp  Map.hpp
includes/display/: ADisplay.hpp  AObjectDisplay.hpp  AViewDisplay.hpp  Display.hpp  DisplayManager.hpp  IDisplay.hpp  IObjectDisplay.hpp  IViewDisplay.hpp
includes/display/textures/: Back.hpp  InputBox.hpp  Pause.hpp  Play.hpp  Restart.hpp  Settings.hpp
includes/display/views/: GameOverView.hpp  GameView.hpp  Menu.hpp  PauseView.hpp  SettingsView.hpp  WinningView.hpp
includes/game/: AGame.hpp  IGame.hpp
includes/game/map/: Map.hpp
includes/game/map/objects/: Apple.hpp
includes/game/map/player/: Player.hpp
includes/map/: Apple.hpp  Map.hpp
includes/map/objects/: Empty.hpp  Obstacle.hpp
includes/player/: Player.hpp
src/: ACase.cpp  CMakeLists.txt  Display.cpp  Map.cpp
src/display/: ADisplay.cpp  AObjectDisplay.cpp  AViewDisplay.cpp  CMakeLists.txt  Display.cpp  DisplayManager.cpp
src/display/textures/: Back.cpp  CMakeLists.txt  InputBox.cpp  Pause.cpp  Play.cpp  Restart.cpp  Settings.cpp
src/display/views/: CMakeLists.txt  GameOverView.cpp  GameView.cpp  Menu.cpp  PauseView.cpp  SettingsView.cpp  WinningView.cpp
src/game/: AGame.cpp  CMakeLists.txt
src/game/map/: CMakeLists.txt  Map.cpp
src/game/map/objects/: CMakeLists.txt
src/game/map/player/: CMakeLists.txt  Player.cpp
src/map/: Apple.cpp  CMakeLists.txt  Map.cpp
src/map/objects/: Apple.cpp  CMakeLists.txt  Empty.cpp  Obstacle.cpp
src/player/: CMakeLists.txt  Player.cpp
